- Updated with new docker configuration, some dependencies, and new confs - Fixed minors bugs
