# routes/v1/authRoutes.js
@@ -16,17 +16,23 @@ router.post('/register', [isRoot, verifyToken], async (req, res) => {
             required: true,
             schema: { $ref: '#/definitions/RegisterUser' }
         }
-        #swagger.responses[500] = {
-            schema:{ $ref: "#/definitions/ErrorInternalServer" }
-         }
-        #swagger.responses[403] = {
-            schema:{ $ref: "#/definitions/ErrorForbidden" }
+        #swagger.responses[200] = {
+            schema:{ $ref: "#/definitions/RegisterOk" }
+        }
+        #swagger.responses[400] = {
+            schema:{ $ref: "#/definitions/ErrorBadRequest" }
         }
         #swagger.responses[401] = {
             schema:{ $ref: "#/definitions/ErrorLogin" }
         }
-        #swagger.responses[200] = {
-            schema:{ $ref: "#/definitions/RegisterOk" }
+        #swagger.responses[403] = {
+            schema:{ $ref: "#/definitions/ErrorForbidden" }
+        }
+        #swagger.responses[404] = {
+            schema:{ $ref: "#/definitions/ErrorNotFound" }
+        }
+        #swagger.responses[500] = {
+            schema:{ $ref: "#/definitions/ErrorInternalServer" }
         }
     */
     await AuthController.registerUser(req, res)
@@ -44,19 +50,22 @@ router.post('/login', async (req, res) => {
             required: true,
             schema: { $ref: '#/definitions/LoginUser' }
         }
-        #swagger.responses[500] = {
-            schema:{ $ref: "#/definitions/ErrorInternalServer" }
-         }
-        #swagger.responses[401] = {
-            schema:{ $ref: "#/definitions/ErrorLogin" }
-        }
         #swagger.responses[200] = {
             schema:{ $ref: "#/definitions/LoginOk" }
         }
+        #swagger.responses[400] = {
+            schema:{ $ref: "#/definitions/ErrorBadRequest" }
+        }
+        #swagger.responses[401] = {
+            schema:{ $ref: "#/definitions/ErrorLogin" }
+        }
+        #swagger.responses[404] = {
+            schema:{ $ref: "#/definitions/ErrorNotFound" }
+        }
+        #swagger.responses[500] = {
+            schema:{ $ref: "#/definitions/ErrorInternalServer" }
+        }
     */
-    req.on('error', function(e) {
-        console.log('problem with request: ' + e.message);
-    });
     await AuthController.loginUser(req, res)
 })
 
